fix: RoomCountFilter component does not centered contend

--- a/src/catalog/components/RealtyFilters/blocks/RoomCountFilter/roomCountFilter.scss
+++ b/src/catalog/components/RealtyFilters/blocks/RoomCountFilter/roomCountFilter.scss
@@ -1,5 +1,6 @@
 .room-filter {
   display: inline-flex;
+  align-items: center;
   padding: 0;
 
   input {
@@ -17,7 +18,7 @@
     position: relative;
     padding: 10px 17px;
     font-size: 14px;
-    line-height: 1.4;
+    line-height: 1;
     border: 1px solid transparent;
 
     &:first-of-type {
